--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "node-js-getting-started",
+  "name": "sd-env-logs-server",
   "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "Server to recieve and store logs from Arduino",
   "engines": {
     "node": "12.x"
   },
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "node test.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3"
   },
   "devDependencies": {
@@ -22,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://git.heroku.com/sd-env-logs-server.git"
   },
   "keywords": [
     "node",
