--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "otp-generator": "^2.0.0",
     "pg": "^8.3.3"
   },
   "devDependencies": {
