--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-validator": "^6.6.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "otp-generator": "^2.0.0",
